--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,107 @@
 body {
     text-align: center;
+    background: #FFA07A;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 {
-    font-family: Monoton;
-    font-size: 70px;
+    font: normal 70px "Monoton", serif;
     margin: 0.2em;
+    color: #b097c1;
 }
 
+img {
+    width: 150px;
+}
+
+
+/*Section: Choose Grid Size*/
 h2 {
+    font-size: 35px;
     margin: 1em 0 0.25em;
+    color: #5ac4a4;
 }
 
 h2:first-of-type {
     margin-top: 0.5em;
 }
 
-table,
-tr,
-td {
-    border: 1px solid black;
+.size {
+    display: inline-block;
+    margin: 5px;
 }
 
+.size-height,
+.size-width {
+    margin: 10px;
+    font-size: 25px;
+    font-weight: 900;
+    color: #e8edeb;
+}
+
+.size-width {
+    position: relative;
+    right: -4px;
+}
+
+input[type=number] {
+    width: 5em;
+    height: 1.5em;
+    border-radius: 5px;
+    font-size: 17px;
+    text-align: center;
+    background-color: #fff;
+    color: #000000;
+}
+
+.buttons {
+    display: inline-block;
+    margin: 15px;
+    position: relative;
+    top: -8px;
+}
+
+input[type=submit] {
+    display: block;
+    width: 120px;
+    height: 40px;
+    background-color: #4d9b4c;
+    border-radius: 8px;
+    color: #d23400;
+    font-weight: 900;
+    font-size: 15px;
+}
+
+input[type=submit]:hover {
+    background-color: #d23400;
+    color: #4d9b4c;
+}
+
+input[value="Clear Grid"] {
+    position: relative;
+    top: 10px;
+}
+
+
+/*Section: Pick a Color */
+input[type=color] {
+    border-radius: 5px;
+    width: 100px;
+    height: 100px;
+}
+
+
+/*Section: Design Canvas */
 table {
     border-collapse: collapse;
     margin: 0 auto;
+    background-color: #fff;
+    border: 5px solid #75e4b3;
+}
+
+tr,
+td {
+    border: 1px solid #000;
 }
 
 tr {
@@ -35,6 +112,6 @@ td {
     width: 20px;
 }
 
-input[type=number] {
-    width: 6em;
+td:hover {
+    background-color: #d3d3d3;
 }
